[gd_scene load_steps=5 format=3 uid="uid://6tmo8kay6y12"]

[ext_resource type="Script" uid="uid://di8y0vydigywj" path="res://scenes/ui/menu/menu.gd" id="1_es6le"]
[ext_resource type="Script" uid="uid://b5762sohqe8g3" path="res://scenes/ui/menu/gameButton.gd" id="2_80knn"]
[ext_resource type="PackedScene" uid="uid://bmseo0o33mlhx" path="res://scenes/utils/bg/non_paralax_bg.tscn" id="2_r4xos"]
[ext_resource type="PackedScene" uid="uid://dbbsogecs7agw" path="res://scenes/ui/changePlayerNumber/changePlayerNumber.tscn" id="3_so6ym"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_es6le")
metadata/_edit_group_ = true

[node name="NonParalaxBG" parent="." instance=ExtResource("2_r4xos")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -95.0
offset_right = 106.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ChangePlayerNumber" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_so6ym")]
layout_mode = 2

[node name="Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game
"
script = ExtResource("2_80knn")

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Multiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multipleye
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Game" to="." method="_on_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
